# physics-simulator-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  install-dependencies.sh  setup.sh
headers/: state.h  window.h
include/: constants.h  dot.h  field.h  line.h  particle.h  particle_manager.h  vector.h  vector_op.h  wave_manager.h  windows.h
include/glad/: glad.h
lib/cmake/Kokkos/: KokkosConfig.cmake  KokkosConfigCommon.cmake  KokkosConfigVersion.cmake  KokkosTargets-relwithdebinfo.cmake  KokkosTargets.cmake
src/: dot.cpp  field.cpp  glad.c  main.cpp  particle.cpp  particle_manager.cpp  vec2.cpp  vec3.cpp  vector_op.cpp  wave_manager.cpp  window.cpp  windows.cpp
